cv10/.metadata/.plugins/org.eclipse.cdt.ui/cv10.build.log
12:58:27 **** Incremental Build of configuration Debug for project cv10 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'circle':
../Core/Src/main.c:87:17: error: 'buff' undeclared (first use in this function)
   87 |                 buff[0] = 0x01; // stiskni leve tlacitko
      |                 ^~~~
../Core/Src/main.c:87:17: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: In function 'semicircle':
../Core/Src/main.c:108:17: error: 'buff' undeclared (first use in this function)
  108 |                 buff[0] = 0x01; // stiskni leve tlacitko
      |                 ^~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

12:58:27 Build Failed. 3 errors, 0 warnings. (took 511ms)

